--- a/css/custom.css
+++ b/css/custom.css
@@ -7,154 +7,135 @@
 }
 
 body{
-        background-color:#fff;
-}
-.but{
-
-	background-color: #000;
-	color: #fff;
+		background-color:#fff;
 }
 
 @media (min-width: 768px) {
-  .navbar {
-    border-radius: 0px;
-    padding-top: 0px;
-    margin-top:-75px;
-    padding-top: 4px;
-    background-color: #111;
+	.navbar {                                                 							
+		border-radius: 0px;
+		margin-top:-75px;
+		padding-top: px;
+		background-color: #000;
 
-  }
-  
- .navbar-inverse   .navbar-collapse .navbar-nav  > li > a {
-  padding-top: 80px;
-  color: #fff;
-  padding-bottom: 5px;
-  line-height: 18px;
-  font-family:Myriad Pro;
-  font-size:16px;
- 
-}
+	}					  				
+	
+ 	.navbar-inverse   .navbar-collapse .navbar-nav  > li > a {
+		padding-top: 83px;
+		color: #fff;
+		padding-bottom:2px;
+		margin-top: 1.5px;
+		line-height: 25px;
+		font-family:Myriad Pro;
+		font-size:15px; 
+	}
 
- .navbar-nav .navbar-fixed-bottom > li > a {
-  padding-top:0px;
-  color: #fff;
-  padding-bottom: 0px;
-  margin-bottom: 30px;
-  line-height: 18px;
-  
- 
-}
-  #first{
+	
 
-      font-family: Myriad Pro,sans-serif,Helvetica;
-      font-weight: normal;
-      font-size: 20px;
-      color: #ff;
-  }
+	  .navbar > .container-fluid .navbar-brand {
+		padding-top: 84px;
+		color: #fff;
+		padding-bottom:2px;
+		font-family:Myriad Pro;
+		font-size:15px; 
+		margin-left: 200px;
+		line-height: 0px;
+		position:relative;
+	 }
 
+	 .upload  .btn-default{
+		color: #fff;
+		background-color: #fff;
+		border-color:#4d91fe;
+		margin-top: 0%;
+		margin-left: 25%;
+		font-size: 18px;
+		font-weight: normal;
+		border-radius: 4px;
+		position: absolute;
+	}
+	
+	.text-center .img-responsive img{
 
-}
-.navbar-inverse .navbar-header .navbar-brand {
-  float: left;
-  height: 50px;
-  padding: 15px 15px;
-  font-size: 18px;
-  line-height: 0px;
-}
-  
-#lower_right {
-  bottom: 8%;
-  right: 0%;
-  position: absolute;
-}
-
-#tag {
-  bottom: 7%;
-  right: 5%;
-  position: absolute;
-  font-size: 17px;
-  font-family: Myriad Pro;
-  font-weight: lighter;
-}
-
-
-
-
-@media (min-width: 768px){
- 
- .btn-default{
-  color: #fff;
-  background-color:#000;
-  border-color:#000;
-  font-size: 20px;
-  font-weight: normal;
-  right:45%;
-  bottom: 27%;
-  border-radius: 4px;
-  position: absolute;
-}
+		height:768px;
+		width:100%;
+	}
 
 }
 
-
-#clean{
-color:#000;
-font-family: Myriad pro,Calibri, Helvetica,sans-serif;
- font-size: 45px;
- position: absolute;
- right:34%;
- bottom:52%;
-font-weight: normal;
+.navbar-inverse  .navbar-brand {
+	float: left;
+	height: 20px;
+	padding: 15px 15px;
+	font-size: 18px;
+	line-height: 0px;
 }
-#green{
-color:#111;
-font-family: Myriad pro,Calibri, Helvetica,sans-serif;
-font-size: 30px;
- position: absolute;.
-font-size: 45px;
-right:43%;
-bottom:48%;
-font-weight: lighter;
+	
+.upload  .btn-default{
+		color: #fff;
+		background-color: #4d4d4d;
+		border-color:#4d4d4d;
+		margin-top: 0%;
+		margin-left: 25%;
+		font-size: 18px;
+		font-weight: normal;
+		border-radius: 4px;
+		position: absolute;
+	}
+
+		
+/*&.btn-default{
+		color: #fff;
+		background-color:#000;
+		border-color:#000;
+		margin-top: 50%;
+		font-size: 20px;
+		font-weight: normal;
+		border-radius: 4px;
+		position: relative;
+}
+*/
+
+.upload .btn-default:focus,.btn-default.focus {
+	color: #999;
+	background-color: #4D4D4D;
 }
 
-.btn-default:focus,.btn-default.focus {
-  color: #999;
-  background-color: #000;
+/*
+.upload .btn-default:active,.btn-default.active{
+	color: #000;
+	background-color: #999;
 }
+*/
 
-.btn-default:active, .btn-default.active{
-  color: #999;
-  background-color: #000;
-}
-
-.btn-default:hover {
-  color: #999;
-  background-color: #000;
+.upload .btn-default:hover {
+	color: #fff;
+	background-color: #333;
 }
 
 .jumbotron  h1{
-  font-size: 48px;
-   font-family: Myriad Pro,Calibri , sans-serif; 
-   font-weight: lighter;
+	font-size: 48px;
+	 font-family: Myriad Pro,Calibri , sans-serif; 
+	 font-weight: lighter;
 }
 
 .jumbotron  h3{
-  font-size: 25px;
-   font-family: Myriad Pro,Calibri , sans-serif; 
-   font-weight: lighter;
+	font-size: 25px;
+	 font-family: Myriad Pro,Calibri , sans-serif; 
+	 font-weight: lighter;
 }
 
  
 
 .navbar-inverse    .navbar-nav > li > a:hover,
-.navbar-inverse    .navbar-nav > li > a:focus, {
-  color: #999;
-  
+.navbar-inverse    .navbar-nav > li > a:focus{
+
+	color:#bfbfbf;
+	
 }
  .navbar-collapse .navbar-nav > li > a:focus , 
  .navbar-collapse .navbar-nav > li > a:hover{
  
-	color:#999;
+	color:#bfbfbf;
 	
  }
  
@@ -168,16 +149,136 @@ font-weight: lighter;
 		background-color:#000;
  }
  
-  .navbar .navbar-collapse{
+	.navbar .navbar-collapse{
  
 		background-color:#000;
  }
+
+  hr{
+
+ 	color:#000;
+ 	margin-top:-16px;
+ }
+
  
+ .boxed {
+
+	border: 1px solid #f3f3f3;
+	background-color: #f2f2f2;
+	box-shadow: 1.5px 1.5px 4px #888888;
+	padding-top: 30px;
+	padding-bottom: 60px;
+    width:470px;
+	padding-left: 10px;
+	/*padding-right: -100px;
+	margin-top:  0px;*/
+	margin-left: 58%;
+	border-radius: 3px;
+	
+ }
  
- /* *********************************************************************************ABOUT************************************************************************/
+.container{
+
+      width:450px;
+      margin-left: 3.5px;
+      padding-right: 10px;
+
+
+}
+
+.boxed .form-group .upload{
+
+margin-left: 13%;
+position: absolute;
+
+}
+
+.boxed .container .form-group  .name{
+
+
+	float:left;
+	font-family: ;
+	font-weight: bolder;
+
+}
+
+.text-center .quote{
+
+	float:left;
+	margin-top: 100px;
+	margin-left: 60px;
+	font-size: 40px;
+
+}
+
+ @media(max-width: 768px ){
+		.text-center .quote{
+			float: left;
+			margin-top: 0px;
+			margin-left: 60px;
+			font-size: 40px;
+		}
+	
+		
+		.boxed {
+			border: 1px solid #f7f7f7;
+			background-color: #f7f7f7;
+			box-shadow: 3px 3px 2px #888888;
+			padding-top: 30px;
+			padding-bottom: 60px;
+			width:470px;
+			padding-left: 10px;
+			/*padding-right: -100px;*/
+			margin-top: 170px;
+			margin-bottom: -100;
+			margin-left: 16%;
+			border-radius: 3px;
+		}
  
- .jumbotron  h2  > a{
-	font-size: 16px;
+		.container{
+			width:450px;
+			margin-left: 3.5px;
+			padding-right: 10px;
+		}
+
+		.boxed .form-group .upload{
+			margin-left: 25%;
+			position: absolute;
+		}
+
+		.boxed .container .form-group  .name{
+			float:left;
+			font-family: ;
+			font-weight: bolder;
+		}
+		
+	
+ }
+
+ @media(min-width: 768px){
+
+ 	.blocks .thumbnail {
+
+
+			width:360px;
+			height:200px;
+			background-color: #f2f2f2;
+			border: 2px solid #f3f3f3;
+			box-shadow: 1px 1px 2px #888888;
+			border-radius: 4px;
+			display: inline-block;
+			margin-left: 70px;
+		}
+
+ 	
+ }
+ 
+
+ 
+ /* ***********************************************************************************************************************ABOUT************************************************************************/
+ 
+ .text-center  p  > a{
+	font-size: 18px;
 	line-height: 50px;
 	font-family: Myriad Pro,Calibri , sans-serif; 
 	font-weight: lighter;
@@ -185,6 +286,12 @@ font-weight: lighter;
 	padding-bottom:9px;
 	color: #000;
 	text-decoration:none;
+}
+
+   p  > a:hover, .p  > a:focus {
+	color: #b8ff00;
+	text-decoration: underline;
+	
 }
 
  .navbar .navbar-header > a{
@@ -200,7 +307,7 @@ font-weight: lighter;
  
 		text-decoration:none;
 		color: #999;
-}
+ }
 
 .navbar-collapse .navbar-nav > li > a , 
  .navbar-collapse .navbar-nav > li > a{
@@ -211,4 +318,19 @@ font-weight: lighter;
  
  .navbar-header {
 background-color:#000;
+}
+
+.future{
+
+position:relative;
+line-height:25vw; 
+font-size:3.5vw; 
+font-family:Myriad Pro; color:#000 ; 
+font-weight:lighter;
+color:#FFF;
+}
+
+.about{
+
+	margin-top: -19px;
 }
