--- a/css/custom.css
+++ b/css/custom.css
@@ -7,7 +7,7 @@
 body{
 	background-color:#fff;
 }
-                  
+
 @media (min-width: 768px){
 	.navbar {                                                 							
 		border-radius: 0px;
@@ -152,13 +152,14 @@ body{
 	box-shadow: 1.5px 1.5px 4px #888888;
 	padding-top: 30px;
 	padding-bottom: 60px;
-    width:470px;	
+    width:470px;
+	height: 500px;
 	padding-left: 10px;
 	/*padding-right: -100px;
 	margin-top:  0px;*/
 	margin-left: 58%;
 	border-radius: 3px;
- }
+}
  
 .container{
       width:450px;
@@ -179,7 +180,7 @@ position: absolute;
 
 .text-center .quote{
 	float:left;
-	margin-top: 100px;
+	margin-top: 155px;
 	margin-left: 60px;
 	font-size: 40px;
 }
@@ -225,6 +226,55 @@ position: absolute;
 	}
 		
  }
+ 
+ 
+.block{
+	border: 1px solid #f2f2f2;
+	border-radius: 3px;
+	background-color: #f2f2f2;
+	box-shadow: 1.5px 1.5px 4px #888888;
+    width:470px;
+	height: 500px;
+	padding-top: 0px;
+	padding-bottom: 60px;
+	padding-left: 0px;
+	margin-top: 5px;
+	margin-left: 10%;
+	display: inline-block;	
+ }
+ 
+.block > img{
+	position: relative; 
+	border-radius: 3px 3px 0 0;
+	width: 470px;
+	width: 100%;
+	max-width: 100%;
+	height: auto;
+}
+
+
+.block .inblock .caption {
+  padding-bottom: 65px;
+  text-align: center;
+  color: #333;
+}
+
+
+.smallblock{
+	border: 1px solid #f2f2f2;
+	border-radius: 3px;
+	background-color: #f2f2f2;
+	box-shadow: 1.5px 1.5px 4px #888888;
+    width: 267px;
+	height: 350px;
+	padding-top: 0px;
+	padding-bottom: 60px;
+	padding-left: 0px;
+	margin-top: 20px;
+	margin-left: 10%;
+	display: inline-block;
+}
+
 
  
  /* ***********************************************************************************************************************ABOUT************************************************************************/
