--- a/css/help.css
+++ b/css/help.css
@@ -42,5 +42,15 @@
     font : 30px Myriad Pro;
     color: #000;
     text-align: center;
+}
 
+.container p:nth-child(4) {
+    font: serif;14px Myriad Pro;
+    text-align: center;
+    text-decoration: none;
+}
+
+ p:nth-child(4) a:hover{
+    color: #000;
+    text-decoration: none;
 }
