--- a/css/custom.css
+++ b/css/custom.css
@@ -184,7 +184,7 @@ body{
 	margin-left: 55px;
 	font-family: Myriad  Pro, sans-serif,Helvetica, Arial;
 	opacity: 1;
-	font-size: 5vh;
+	font-size: 3.5vw;
 	
 }
 
@@ -194,8 +194,8 @@ body{
 	.text-center .quote p{
 		float: left;
 		margin-top: 5%;
-		margin-left: 11%;
-		font-size: 44px;
+		margin-left: 15%;
+		font-size: 5vw;
 	}
 		
 	.boxed {
