--- a/css/login.css
+++ b/css/login.css
@@ -15,7 +15,7 @@
 	padding-right: 10px;
 }
 
-.container .boxed .form-container .password{
+.container .boxed .form-container .name{
 	float: left;
 }
 
